--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,11 @@
         "semi": [
             "error",
             "always"
+        ],
+        "@typescript-eslint/explicit-module-boundary-types": 0,
+        "@typescript-eslint/no-non-null-assertion": 0,
+        "@typescript-eslint/ban-types": [
+
         ]
     }
 }
